--- a/views/layout_profile.erb
+++ b/views/layout_profile.erb
@@ -6,7 +6,7 @@
 
 
 
-    <title>THE POLYGLOT</title>
+    <title>MyKindOfNY</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
