--- a/views/profileblog.erb
+++ b/views/profileblog.erb
@@ -27,10 +27,10 @@
                                     </a>
                                     <div class="my-3">
                                         <div class="mb-2">
-                                            <h5 class="mb-0">Aaron Cunningham</h5>
-                                            <span class="text-muted">Front-End Product Engineer</span>
+                                            <h5 class="mb-0">Michael Law</h5>
+                                            <span class="text-muted">NYCDA Instructor</span>
                                         </div>
-                                        <span class="text-small text-muted"><i class="icon-location"></i> Melbourne, AU</span>
+                                        <span class="text-small text-muted"><i class="icon-location"></i> New York, NY</span>
                                     </div>
                                     <div>
                                         <button class="btn btn-outline-primary"><i class="icon-add-user"></i> Follow</button>
