--- a/views/signup.erb
+++ b/views/signup.erb
@@ -69,13 +69,13 @@ body{
                             <div>
                                 <div class="mb-5 text-center">
                                     <h3 class="h2 mb-2">Features &amp; Benefits</h3>
-                                    <span>All plans come with 14 days free</span>
+                                    <span>Get exclusive invites to tour parts unknown</span>
                                 </div>
                                 <ul class="list-unstyled list-spacing-sm mb-5 ">
                                     <li class="row">
                                         <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
                                         </div>
-                                        <div class="col-10">Introduce the major benefits of your product and set the scene for what's to come</div>
+                                        <div class="col-10">Discover parts of New York that you never knew existed! </div>
                                     </li>
                                     <li class="row align-items-center">
                                         <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
@@ -85,7 +85,7 @@ body{
                                     <li class="row">
                                         <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
                                         </div>
-                                        <div class="col-10">Describe some key features of this aspect of the product</div>
+                                        <div class="col-10">Meet new people!</div>
                                     </li>
                                     <li class="row align-items-center">
                                         <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
