--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,11 @@
         <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
-
+<style>
+a.card{
+    height:52vh;
+}
+</style>
     </head>
 
     <body>
@@ -180,11 +184,11 @@
                             <a href="#" class="card">
                                 <img alt="Image" src="assets/img/lobby1.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
-                            <h5>Inner Pages</h5>
+                            <h5>Hidden Gems</h5>
                             <p>
-                                Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
+                                cludes a collection of detailed inner pages to complete your online presence.
                             </p>
-                            <a href="pages-inner.html">Explore Inner Pages &rsaquo;</a>
+                            <a href="pages-inner.html">Explore Inner Buildings &rsaquo;</a>
                         </li>
                         <!--end of col-->
                     </ul>
