some bugs still but functionable

--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A robust suite of app and landing page templates by Medium Rare">
         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
-        <link href="assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="../assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="../assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="../assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     </head>
 
     <body>
@@ -18,7 +18,7 @@
                 <div class="container">
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="/home">
-                         <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-sm" />
+                         <img alt="logo" src="../assets/img/nylogo.jpeg" class="avatar avatar-sm" />
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="icon-menu h4"></i>
@@ -76,7 +76,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle dropdown-toggle-no-arrow p-lg-0" href="/profile" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <img alt="Image" src="assets/img/me.jpg" class="avatar avatar-xs" />
+                                        <img alt="Image" src="../assets/img/me.jpg" class="avatar avatar-xs" />
                                         <span class="badge badge-danger">3</span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right" aria-labelledby="dropdown01">
