ready for presentation

--- a/views/home.erb
+++ b/views/home.erb
@@ -102,7 +102,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-sidekick.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/chand.jpg" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">Sidekick</h4>
@@ -137,7 +137,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-pitstop.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/mill.png" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">Pitstop</h4>
@@ -170,7 +170,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-pipeline.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/lobby1.jpg" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">pipeline.js</h4>
@@ -203,7 +203,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-paydar.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/overview/chrys.jpg" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">Paydar</h4>
@@ -236,7 +236,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-kin.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/banksy.jpg" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">Kin</h4>
@@ -269,7 +269,7 @@
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
-                                    <img class="card-img-top" src="assets/img/graphic-product-bench.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="../assets/img/pershing-square.jpg" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">Bench</h4>
@@ -329,9 +329,7 @@
                         <div class="col-auto">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="#">
-                                        <img alt="Image" src="assets/img/logo-gray.svg" />
-                                    </a>
+                                   
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#">Overview</a>
