--- a/views/index.erb
+++ b/views/index.erb
@@ -151,7 +151,7 @@ a.card{
                         <div class="col-12 col-md-9 col-lg-8">
                             <span class="title-decorative">MyKindOfNY</span>
                             <h2 class="display-4">New York City is attractive from every angle</h2>
-                            <span class="lead">MyKindOfNY delivers a seamless user experience, offering like-minded people to share ideas.</span>
+                            <span class="lead">MyKindOfNY delivers a seamless user experience, offering like-minded people a place to share ideas.</span>
 
                         </div>
                         <!--end of col-->
@@ -166,7 +166,7 @@ a.card{
                             <p>
                                 Meet like minded people at private and underground locations!
                             </p>
-                            <a href="#">Explore Landing Pages &rsaquo;</a>
+                            <a href="#">Explore Secret Locations &rsaquo; Events!</a>
                         </li>
                         <!--end of col-->
                         <li class="col-12 col-md-4">
