--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -60,9 +60,9 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Categories</a>
                                     <div class="dropdown-menu" aria-labelledby="componentsDropdown">
 
-                                        <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
+                                        <a class="dropdown-item" href="components-bootstrap.html">Architect</a>
 
-                                        <a class="dropdown-item" href="components-wingman.html">Wingman</a>
+                                        <a class="dropdown-item" href="components-wingman.html">Galleries</a>
 
                                     </div>
                                 </li>
