--- a/views/index.erb
+++ b/views/index.erb
@@ -171,7 +171,7 @@ a.card{
                         <!--end of col-->
                         <li class="col-12 col-md-4">
                             <a href="pages-app.html" class="card">
-                                <img alt="Image" src="../assets/img/grandart.jpg" class="img-fluid rounded" style="height:60vh;"/>
+                                <img alt="Image" src="..assets/img/chand.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Beautiful art around the city.</h5>
                             <p>
