--- a/views/index.erb
+++ b/views/index.erb
@@ -160,7 +160,7 @@ a.card{
                     <ul class="row feature-list feature-list-sm">
                         <li class="col-12 col-md-4">
                             <a href="#" class="card">
-                                <img alt="Image" src="../assets/img/nycbg.jpg" class="img-fluid rounded" style="height:60vh;"/>
+                                <img alt="Image" src="../assets/img/chand.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Meeting Events</h5>
                             <p>
@@ -171,7 +171,7 @@ a.card{
                         <!--end of col-->
                         <li class="col-12 col-md-4">
                             <a href="pages-app.html" class="card">
-                                <img alt="Image" src="..assets/img/chand.jpg" class="img-fluid rounded" style="height:60vh;"/>
+                                <img alt="Image" src="../assets/img/grandart.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Beautiful art around the city.</h5>
                             <p>
@@ -182,7 +182,7 @@ a.card{
                         <!--end of col-->
                         <li class="col-12 col-md-4">
                             <a href="#" class="card">
-                                <img alt="Image" src="../assets/img/lobby1.jpg" class="img-fluid rounded" style="height:60vh;"/>
+                                <img alt="Image" src="assets/img/lobby1.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Hidden Gems</h5>
                             <p>
