--- a/views/feed.erb
+++ b/views/feed.erb
@@ -1,7 +1,7 @@
 
  <!--end of col-->
                         <div class="col-12 col-md-8">
-                          <% @posts.each do |post| %>
+                          <% @posts.reverse.each do |post| %>
 
                             <div class="card">
                                 <div class="card-header card-header-borderless d-flex justify-content-between">
@@ -32,3 +32,4 @@
                             </div>
 							 <% end %>
                             <!--end of card-->
+                   <%= will_paginate @posts %>
