--- a/views/myblog.erb
+++ b/views/myblog.erb
@@ -7,7 +7,7 @@
                         <div class="col-12 col-md-4 mb-4 mb-md-0">
                             <div class="card card-profile-large text-center">
                                 <div class="card-header">
-                                    <img alt="Image" src="assets/img/nycbg.jpg" class="bg-image" />
+                                    <img alt="Image" src="../assets/img/nycbg.jpg" class="bg-image" />
                                 </div>
                                 <div class="card-body">
                                     <a href="#">
