--- a/views/profileblog.erb
+++ b/views/profileblog.erb
@@ -124,8 +124,9 @@
                         <!--end of col-->
                         <div class="col-12 col-md-8">
 						  <h1><%= @specific_profile.first_name %>'s Blog</h1>
-                          
-                          <% @post.reverse.each do |post| %>
+
+
+                          <% @specific_post.reverse.each do |post| %>
 
                             <div class="card">
                                 <div class="card-header card-header-borderless d-flex justify-content-between">
@@ -165,7 +166,7 @@
                 </div>
                 <!--end of container-->
             </section>
-             <%= will_paginate @post %> 
+             <%= will_paginate @specific_post %> 
             <footer class="footer-short">
                 <div class="container">
                     <hr>
