--- a/views/social.erb
+++ b/views/social.erb
@@ -6,7 +6,7 @@
   <div class="card-body">
     <h5 class="card-title"><%= user.first_name %></h5>
     <p class="card-text"><%= user.email %></p>
-    <a href="/profileblog/<%= user.id %>" class="btn btn-primary"><%= user.first_name %>'s Page</a>
+    <a href="/myblog/<%= user.id %>" class="btn btn-primary"><%= user.first_name %>'s Page</a>
   </div>
 </div>
 <% end %>
